# witchouse_RL_project

./: .gitignore  README.md  do_embedings.py  inference.py  pyproject.toml  reformat_to_wav.py  separate_instrumentals.py  train_agent.py
embeddings/: mean_electronic.npy  mean_witchouse.npy
rl/: compute_electronic_etalon.py  env.py  etalon.py
