[project]
name = "witchouse-rl-project"
version = "0.1.0"
description = ""
authors = [
    { name = "darinabird", email = "49818561+darinabird@users.noreply.github.com" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydub (>=0.25.1,<0.26.0)",
    "numpy (<2.0.0)",
    "tensorflow (==2.12.0)",
    "openl3 (>=0.4.2,<0.5.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "gym (>=0.26.2,<0.27.0)",
    "torch (==2.2.2)",
    "torchaudio (==2.2.2)",
    "torchvision (==0.17.2)",
    "stable-baselines3 (==2.2.1)",
    "shimmy (>=0.2.1)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
